--- a/src/BookingProject/FlightBooking/FlightBooking.Master
+++ b/src/BookingProject/FlightBooking/FlightBooking.Master
@@ -45,12 +45,12 @@
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
                             <li><a runat="server" href="/">Accueil</a></li>
-                            <li><a runat="server" href="/Travel.aspx">Réservations</a></li>
+                            <li><a runat="server" href="~/Models/Travel.aspx">Réservations</a></li>
                             <li><a href="#">A propos</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Je veux...<span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a runat="server" href="/Travel.aspx">Planifier</a></li>
+                                    <li><a runat="server" href="~/Models/Travel.aspx">Planifier</a></li>
                                     <li><a href="#">Trouver un vol</a></li>
                                     <li><a href="#">Trouver un hôtel</a></li>
                                     <li class="divider"></li>
@@ -63,7 +63,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <!--<li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>-->
                             <li><a href="#">Mon Panier (0)</a></li>
-                            <li><a runat="server" href="~/Contact.aspx">Nous Contacter</a></li>
+                            <li><a runat="server" href="~/Models/Contact.aspx">Nous Contacter</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div><!--/.container-fluid -->
