--- a/src/BookingProject/FlightBooking/FlightBooking.Master
+++ b/src/BookingProject/FlightBooking/FlightBooking.Master
@@ -46,23 +46,11 @@
                         <ul class="nav navbar-nav">
                             <li><a runat="server" href="/">Accueil</a></li>
                             <li><a runat="server" href="~/Models/Travel.aspx">Réservations</a></li>
-                            <li><a href="#">A propos</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Je veux...<span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a runat="server" href="~/Models/Travel.aspx">Planifier</a></li>
-                                    <li><a href="#">Trouver un vol</a></li>
-                                    <li><a href="#">Trouver un hôtel</a></li>
-                                    <li class="divider"></li>
-                                    <li class="dropdown-header">Mes articles...</li>
-                                    <li><a href="#">Mon Panier</a></li>
-                                    <li><a href="#">Paiement</a></li>
-                                </ul>
-                            </li>
+                            <li><a runat="server" href="~/Models/Contact.aspx">A propos</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <!--<li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>-->
-                            <li><a href="#">Mon Panier (0)</a></li>
+                            <li><a href="#"><asp:Label runat="server" ID="lblPanier" Text="Mon Panier" /></a></li>
                             <li><a runat="server" href="~/Models/Contact.aspx">Nous Contacter</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
