Fin de la realisation du panier, validation des informations du formulaire de paiement, realisation de la page de contact, corrections et ameliorations d'autres vues

--- a/src/BookingProject/FlightBooking/FlightBooking.Master
+++ b/src/BookingProject/FlightBooking/FlightBooking.Master
@@ -68,7 +68,7 @@
         </asp:ContentPlaceHolder>
         <hr />
         <footer>
-            <p>&copy; <%: DateTime.Now.Year %> - FlightBooking - EMN/FILA2 : Hadrien GERARD, Damien GOUJARD, Maxime PEROCHEAU, Joris PICHARD, Gabriel QUESTE</p>
+            <p>&copy; <%: DateTime.Now.Year %> - FlightBooking - EMN/FILA2 : Damien GOUJARD, Gabriel QUESTE, Hadrien GERARD, Joris PICHARD, Maxime PEROCHEAU</p>
         </footer>
     </div><!-- /container -->
     
